Add a DELETE method
