# main.go
@@ -21,7 +21,7 @@ func main() {
 	v1 := router.Group("/aadgroup/api/v1")
 	{
 		v1.GET("/user/:upn", aadgroup.GetUser)
-		//v1.DELETE("/user", aadgroup.RemoveUser)
+		v1.DELETE("/user", aadgroup.RemoveUser)
 		//v1.GET("/users", aadgroup.GetUsers)
 		v1.POST("/users", aadgroup.AddUsers)
 	}
